--- a/pages/diagnose/eva_result/eva_result.wxml
+++ b/pages/diagnose/eva_result/eva_result.wxml
@@ -2,7 +2,7 @@
     <!-- 医生信息 -->
     <view class="doctor_info">
         <view class="profile">
-            <view class="pic" style="background-image: url('../../images/profile.png'); background-size: 110%;"></view>
+            <view class="pic" style="background-image: url('../../../images/profile.png'); background-size: 110%;"></view>
         </view>
         <view class="intro">
             <view class="Name" style="font-size: 20px;">{{Name}}</view>
@@ -16,11 +16,14 @@
         <view class="content">子宫颈病变及子宫颈HPV感染、反复发作阴道炎及盆腔炎、发福流产保胎、孕前保健咨询、不宁症、月经不调子宫颈病变及子宫颈HPV感染、反复发作阴道炎及盆腔炎、发福流产保胎、孕前保健咨询、不宁症、月经不调</view>
     </view>
     <!-- 医生建议 -->
-    <view class="suggest_box">
-        <view class="suggest_title">医生建议</view>
-        <view class="suggest">
-            <view class="suggest_content"><text class="col-4 font-break">××××××××××××××××××××××××××××××××××××××××××××××××××××××××××××</text></view>
-        </view>
-        <button bindtap='goToAsk'>快速提问</button>
+    <view class="tab">
+            <text class="name">—— 医生建议 ——</text>
     </view>
+
+    <view class="suggest_content">×××××××××××××××××××××××××××××××××××××××××××××××××××××××××××</view>
+    <view class="ask" bindtap='goToAsk'>
+        <text class="iconfont icon-jilu"></text>
+        <view class="askText">快速提问</view>
+    </view>
+
 </view>
