--- a/pages/me/me.wxml
+++ b/pages/me/me.wxml
@@ -1,5 +1,5 @@
-<view class="user_info_wrap" >
-<!-- <navigator url="/pages/login/index">登陆</navigator> -->
+<!-- <view class="user_info_wrap" >
+
 
     <view wx:if="{{userInfo.avatarUrl}}" class="user_info" > 
         <image class="user_icon" src="{{userInfo.avatarUrl}}" > </image>
@@ -9,16 +9,64 @@
     <view wx:else class="userBtn">
         <button  plain style="border:0" bindtap="getUserProfile"> 
             <image class="btnImg" src="../../icons/log.png"></image>
-            <!-- <view ></view> -->
+            
         </button>
     </view>
     
-</view>  
+</view>   -->
+
+<view>
+		<view class="top">
+			<view class="center">
+				<view class="center_top">
+					<!-- <view class="center_img">
+						<open-data type="userAvatarUrl" class="user_head"></open-data>
+					</view> -->
+                    <view wx:if="{{userInfo.avatarUrl}}" class="user_info" > 
+                       <image class="user_icon" src="{{userInfo.avatarUrl}}" ></image>
+                       <view class="user_name" >{{userInfo.nickName}}</view>
+                       
+                    </view>
+
+                    <view wx:else class="userBtn">
+                        <button  plain style="border:0" bindtap="getUserProfile"> 
+                          <image class="btnImg" src="../../icons/log.png"></image>
+                        </button>
+                    </view>
+                    
+
+
+					<!-- <view class="center_info">
+						<view class="center_name">{{trueName}}</view>
+						<view class="center_phone">基本信息</view>
+					</view> -->
+				</view>
+				<view class="center_down">
+					<view class="center_rank">
+						<!-- <image class="rank_icon" src="../../static/rank.png"></image> -->
+						<text class="rank_text">健康档案</text>
+					</view>
+					<view class="center_score">
+						<!-- <image class="rank_icon" src="../../static/points.png"></image> -->
+						<text class="rank_text">{{isPerfect}}</text>
+					</view>
+				</view>
+			</view>
+			<image src='http://docfile.funkingka.cn/FqzmiFqvXbHg-cfbquNRlawHUgHt' mode='scaleToFill' class='gif-wave'></image>
+		</view>
+	</view>
+
+
+
+
+
+
 
 <view class="user_content" >
     <navigator url="/pages/me/information/index" >
         <view class="user_information">
-            <view class="iconfont icon-geren" >健康档案</view>
+            <view class="iconfont icon-geren"></view>
+            <view class="jiankang">健康档案</view>
             <view class="info_arrow"> </view>
         </view>   
         
@@ -26,7 +74,8 @@
  
     <navigator url="/pages/me/record/index" >
         <view class="user_record">
-            <view class="iconfont icon-jilu1" >诊断记录</view>
+             <view class="iconfont icon-jilu1" ></view>
+            <view class="zhenduan">诊断记录</view>
             <view class="re_arrow"> </view>
         </view>       
     </navigator>
@@ -35,14 +84,16 @@
     <!-- about us这里貌似没有 -->
     <navigator url="/pages/me/aboutus/index" >
         <view class="user_aboutus">
-            <view class="iconfont icon-guanyu" >关于我们</view>
+            <view class="iconfont icon-guanyu" ></view>
+            <view class="guanyu">关于我们</view>
             <view class="us_arrow"> </view>
         </view>       
     </navigator>
 
     <navigator url="/pages/me/help/index" >
         <view class="user_help">
-            <view class="iconfont icon-bangzhu" >帮助与反馈</view>
+            <view class="iconfont icon-bangzhu" ></view>
+            <view class="bangzhu">帮助与反馈</view>
             <view class="help_arrow"> </view>
         </view>       
     </navigator>
