--- a/pages/home/searchTips/searchTips.wxml
+++ b/pages/home/searchTips/searchTips.wxml
@@ -3,15 +3,15 @@
             <!-- 搜索框 -->
                 <view class="weui-search-bar__box">
                     <icon class="weui-icon-search_in-box" type="search" size="14"></icon>
-                    <input type="text" class="weui-search-bar__input" placeholder="请输入搜索内容" confirm-type='search' value="{{inputValue}}" bindinput='inputBind' bindconfirm='query'/>
+                    <input type="text" class="weui-search-bar__input" placeholder="请输入搜索内容" confirm-type='search' value="{{inputValue}}" bindinput='inputBind' bindconfirm='onSearch'/>
                 </view>
             </view>
             <!-- 搜索按钮,调用搜索查询方法 -->
-            <view class="weui-search-bar__cancel-btn" bindtap='search'>搜索</view>
+            <view class="weui-search-bar__cancel-btn" bindtap='onSearch'>搜索</view>
 </view>
 
 <!-- 列表 -->
-<scroll-view scroll-y="true" style="height: 1300rpx;" bindscrolltolower="scrolltolower">
+<scroll-view scroll-y="true" style="height: 1250rpx;" bindscrolltolower="scrolltolower">
   <view class="floor"
         wx:for="{{article_list}}"
         wx:key="knoCardId"
