--- a/pages/home/doctor/doctor.wxss
+++ b/pages/home/doctor/doctor.wxss
@@ -3,7 +3,15 @@
   border-bottom: solid #e9e9e9;
   display: flex;
   width: 100%;
-  height: 250rpx;
+  height: 170rpx;
+  position: relative;
+}
+
+.doctor_floor .background{
+  width: 100%;
+  height: 100%;
+  position: absolute;
+  z-index: -1;
 }
 
 .doctor_floor .avatar{
