--- a/pages/home/home.wxss
+++ b/pages/home/home.wxss
@@ -173,6 +173,14 @@ swiper swiper-item .pic {
   display: flex;
   width: 100%;
   height: 150rpx;
+  position: relative;
+}
+
+.doctor_floor .background{
+  width: 100%;
+  height: 100%;
+  position: absolute;
+  z-index: -1;
 }
 
 .doctor_floor .avatar{
