--- a/pages/me/record/index.wxml
+++ b/pages/me/record/index.wxml
@@ -1,14 +1,15 @@
-<view class="weui-search-bar"> 
-            <view class="weui-search-bar__form">
+<!-- <view class="weui-search-bar">  -->
+            <!-- <view class="weui-search-bar__form"> -->
             <!-- 搜索框 -->
-                <view class="weui-search-bar__box">
-                    <icon class="weui-icon-search_in-box" type="search" size="14"></icon>
-                    <input type="text" class="weui-search-bar__input" placeholder="请输入搜索内容"/>
-                </view>
-            </view>
+                <!-- <view class="weui-search-bar__box"> -->
+                    <!-- <icon class="weui-icon-search_in-box" type="search" size="14"></icon> -->
+                    <!-- <input type="text" class="weui-search-bar__input" placeholder="请输入搜索内容"/> -->
+                <!-- </view> -->
+            <!-- </view> -->
             <!-- 搜索按钮,调用搜索查询方法 -->
-            <view class="weui-search-bar__cancel-btn" bindtap='search'>搜索</view>
-</view>
+            <!-- <view class="weui-search-bar__cancel-btn" bindtap='search'>搜索</view> -->
+<!-- </view> -->
+
 <!-- 档案 -->
 
 <!-- 列表 -->
