--- a/pages/home/home.wxss
+++ b/pages/home/home.wxss
@@ -228,4 +228,5 @@ swiper swiper-item .pic {
   display: -webkit-box;
   -webkit-line-clamp: 3;
   -webkit-box-orient: vertical;
+  word-break: break-all;
 }
