--- a/pages/home/tipDetail/tipDetail.wxss
+++ b/pages/home/tipDetail/tipDetail.wxss
@@ -7,6 +7,12 @@
   width: 100%;
   height: 100%;
 }
+.background{
+  width: 100%;
+  height: 100%;
+  position: absolute;
+  z-index: -1;
+}
 
 .header{
   padding: 5%;
