--- a/pages/luntan/luntan.wxml
+++ b/pages/luntan/luntan.wxml
@@ -3,7 +3,7 @@
   <image class="background" src="/images/背景页.png"></image>
   <view class="search">
     <view class="searchBar">
-      <icon class="weui-icon-search" type="search" size="14"></icon>
+      <icon class="weui-icon-search" type="search" size="24"></icon>
       <input  class="input" placeholder="请输入要搜索的内容" bindtap="entrySearch" disabled />
     </view>
   </view>
@@ -47,19 +47,18 @@
       <block wx:for="{{posts}}" wx:key="{{item.pId}}" >      
       <!-- <navigator class="goods-block" url="./detail/detail"> -->
       <view class="goods-block"   bindtap="lookDetail" data-item="{{item}}">
+        <image class="postimage" src="{{item.pImage}}"/>
         <view class="good-info">
-          <view class="good-img">
+          <image class="ava" src="{{item.ciAvatarturl}}"/>
 
-              <image src="{{item.ciAvatarturl}}"/>
-            </view>
+          <view class="title">{{item.pTitle}} </view>
 
-          <span class="title">{{item.pTitle}} </span>
-
-          <view class="desc">
+          <view class="date">
             {{item.createTime}}
           </view>
-        
+          <view class="addr">{{item.pLocation}}</view>
         </view> 
+      </view> 
         <!-- <view class="good-handle"> -->
           <!-- <view class="price">
             <span class="current-price">{{item.current_price}}</span>
@@ -70,7 +69,7 @@
           </view> -->
         <!-- </view> -->
       <!-- </navigator> -->
-      </view>
+      <!-- </view> -->
 
       </block>
   </scroll-view>
