--- a/pages/me/record/index.wxml
+++ b/pages/me/record/index.wxml
@@ -31,22 +31,24 @@
 
 <scroll-view scroll-y="false">
   <view class="doctor_floor"
-        wx:for="{{recordr_list}}"
+        wx:for="{{record_list}}"
         wx:item="item"
         wx:key="id"
         bindtap="toDetail"
         bindscrolltolower="scrolltolower">
         <image class="background" src="/images/方框1.png"></image>
         <view class="avatar">
-            <image class="img" src="{{item.docPhoto}}" mode="scaleToFill" />
+            <image class="img" src="{{item.userAvatar}}" mode="scaleToFill" />
         </view>   
         
 
         <view class="info"> 
-          <text class="name">{{item.ciRealname}}</text>
-          <text class="title">{{item.docPost}}</text>
-          <view class="hospital">{{item.docHospital}}</view>
-          <view class="excel">科室：{{item.docDepartment}}</view>
+          <text class="name">{{item.realName}}</text>
+          <text class="title" wx:if="{{item.sex}}">女</text>
+          <text class="title" wx:if="{{!item.sex}}">男</text>    
+          <view class="hospital" wx:if="{{item.diagnoseResult}}">患有抑郁症（模型准确率>90%）</view>
+          <view class="hospital" wx:if="{{!item.diagnoseResult}}">未患有抑郁症（模型准确率>90%）</view>
+          <view class="excel" >诊断时间：{{item.updateTime}}</view>
         </view>   
   </view>
 </scroll-view>
