--- a/pages/home/searchTips/searchTips.wxml
+++ b/pages/home/searchTips/searchTips.wxml
@@ -1,5 +1,6 @@
 <!-- 引入模板 -->
 <import src="../../../utils/wxParse/wxParse.wxml"/>
+<image class="background" src="/images/背景页.png"></image>
 <view class="weui-search-bar"> 
             <view class="weui-search-bar__form">
             <!-- 搜索框 -->
@@ -13,7 +14,7 @@
 </view>
 
 <!-- 列表 -->
-<scroll-view scroll-y="true" style="height: 1250rpx;" bindscrolltolower="scrolltolower">
+<scroll-view scroll-y="true" style="height: 1250rpx;" bindscrolltolower="scrolltolower" wx:if="{{!none}}">
   <view class="floor"
         wx:for="{{article_list}}"
         wx:key="knoCardId"
@@ -31,3 +32,4 @@
         </view>  
     </view>
 </scroll-view>
+<view class="none" wx:else>暂无搜索结果</view>
