--- a/pages/home/searchTips/searchTips.wxss
+++ b/pages/home/searchTips/searchTips.wxss
@@ -144,3 +144,21 @@
   bottom: 8%;
   color: #b4afae;
 }
+
+.none{
+  margin: 20rpx auto;
+  color: silver;
+  text-align: center;
+  font-size: large;
+}
+page{
+  position: relative;
+  width: 100%;
+  height: 100%;
+}
+.background{
+  width: 100%;
+  height: 100%;
+  position: absolute;
+  z-index: -1;
+}
