--- a/pages/luntan/detail/detail.wxml
+++ b/pages/luntan/detail/detail.wxml
@@ -14,23 +14,7 @@
     <view class="detail-post-author-name">
       <!-- 用户名字 -->
       <text>{{ detail.ciNkname}}</text>
-  
-      <!-- <view class="detail-type-item"  wx:if="{{detail.tab === 'good'}}"> -->
-      <view class="detail-type-item"> 
-        <view class="detail-type-item-font">#精华#</view>
-      </view>
-      <view class="detail-type-item">
-      <!-- <view class="detail-type-item"  wx:if="{{detail.tab === 'share'}}"> -->
-        <view class="detail-type-item-font">#分享#</view>
-      </view>
-      <view class="detail-type-item">
-      <!-- <view class="detail-type-item"  wx:if="{{detail.tab === 'ask'}}"> -->
-        <view class="detail-type-item-font">#问答#</view>
-      </view>
-      <view class="detail-type-item">
-      <!-- <view class="detail-type-item"  wx:if="{{detail.tab === 'job'}}"> -->
-        <view class="detail-type-item-font">#招聘#</view>
-      </view>
+
     </view>
     <!-- 发表时间 -->
     <view class="detail-post-time">楼主 发表于{{ detail.createTime }},{{detail.pLocation}}</view>
@@ -52,8 +36,6 @@
 <view class="detail-post-header">
 
   <view class="detail-post-title">
-    <!-- <view class="detail-posts-tag hot">置顶</view> -->
-    <view class="detail-posts-tag">浏览量：{{detail.pReadNum}}</view>
     <view>{{detail.pTitle}}</view>
   </view>
   <!-- <view class="detail-posts-tag hot" wx:if="{{detail.top === true}}">置顶</view>
@@ -90,7 +72,7 @@
               <view class="detail-post-comment-time">{{item.floor}}楼 发表于{{ item.releaseTime}}</view>
             </view>
             <view class="detail-post-comment-info-cell" style="text-align:right" id="{{item.id}}" data-index="{{index}}" catchtap="reply">
-              <text class="detail-post-zan-num" wx:if="{{item.likes>=0}}">{{item.likes}}</text>
+              <!-- <text class="detail-post-zan-num" wx:if="{{item.likes>=0}}">{{item.likes}}</text> -->
               <image class="detail-post-zan" mode="scaleToFill" src="../../../images/zan.png"></image>
               <!-- <image class="detail-post-zan" mode="scaleToFill" src="C:/Users/zoedusy/Pictures/Camera Roll/pic/pic.png"></image> -->
             </view>
